# awm

./: .gitmodules  CMakeLists.txt  README.md  build.py  setup.py  todo_list.txt
awm-lib/: CMakeLists.txt
awm-lib/src/: awm_node.cpp  awm_node.h
awm-lib/src/components/: awm_component_base.h
awm-lib/tests/: CMakeLists.txt
awm-lib/tests/src/: nodes_test.cpp  performance_test.cpp
src/: awm_node.cpp  awm_node.h  awm_node_param.h
src/components/: awm_component_base.cpp  awm_component_base.h
tests/: CMakeLists.txt
tests/src/: nodes_test.cpp  performance_test.cpp
